--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-  <form method="login" action="login.php">
+  <form method="POST" action="login.php">
     <label for="correo">Correo</label>
     <input type="text" name="correo"/><br>
     <label for="password">Contraseña</label>
