--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <script type="text/javascript" src="js/jquery-1.12.3.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.js"></script>
 </head>
-<body>
-  <form method="POST" action="login.php">
-    <label for="correo">Correo</label>
-    <input type="text" name="correo"/><br>
-    <label for="password">Contraseña</label>
-    <input type="password" name="password"/><br>
-    <input type="submit" value="Iniciar Sesión"/>
-  </form>
+<body class="valign-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="card col l6 m9 s12 offset-l3 offset-m2">
+         <div class="card-image waves-effect waves-block waves-light">
+           <img src="./img/img1.jpg">
+         </div>
+         <div class="card-content">
+           <form method="POST" action="login.php">
+             <label for="correo">Correo</label>
+             <input type="text" name="correo"/><br>
+             <label for="password">Contraseña</label>
+             <input type="password" name="password"/><br>
+             <input type="submit" value="Iniciar Sesión"/>
+           </form>
+         </div>
+       </div>
+    </div>
+  </div>
 </body>
 </html>
